--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -14,7 +14,9 @@
     <header>
         <div class="menu">
             <div class="logo">
-                <img src="./img/logo.svg" alt="Logo">
+                <a href="/ProjetosFront/Projeto03">
+                    <img src="./img/logo.svg" alt="Logo">
+                </a>
             </div>
             <nav>
                 <ul>
@@ -23,6 +25,9 @@
                     <li><a href="#">Get Started</a></li>
                 </ul>
             </nav>
+            <div class="drop">
+                <span>|||</span>
+            </div><!-- menu-mobile -->
         </div><!-- menu -->
     </header>
 
@@ -43,6 +48,9 @@
                     </div>
                     <div class="button-bookmark">
                         <a href="#">Bookmark</a>
+                    </div>
+                    <div class="button-mobile">
+                        <img src="./img/icon-bookmark.svg" alt="Icone Bookmark">
                     </div>
                 </div><!-- buttons -->
             </div><!-- container -->
@@ -121,7 +129,8 @@
                         <p style="color: rgb(7, 161, 161);">Pledge $200 or more</p>
                     </div><!-- header -->
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis sapiente magnam, modi
-                        pariatur ab necessitatibus quo enim nihil, eveniet veritatis rerum assumenda sit eos assumenda sit eos enim nihil.</p>
+                        pariatur ab necessitatibus quo enim nihil, eveniet veritatis rerum assumenda sit eos assumenda
+                        sit eos enim nihil.</p>
                     <div class="footer">
                         <h1>0</h1>
                         <div class="button-disable">
@@ -137,7 +146,9 @@
     <footer>
         <div class="menu">
             <div class="logo">
-                <img src="./img/logo.svg" alt="Logo">
+                <a href="/ProjetosFront/Projeto03">
+                    <img src="./img/logo.svg" alt="Logo">
+                </a>
             </div>
             <nav>
                 <ul>
