Project04 - Front Desktop

--- a/Projeto04/index.html
+++ b/Projeto04/index.html
@@ -6,21 +6,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Project 04</title>
 </head>
 
 <body>
 
     <header>
-        <!-- header and menu -->
+        <div class="container">
+            <div class="menu">
+                <div class="logo">
+                    <a href="/ProjetosFront/Projeto04">
+                        <img src="./img/logo.svg" alt="Logo Huddle">
+                    </a>
+                </div><!-- logo -->
+                <div class="button">
+                    <a href="/ProjetosFront/Projeto04">Try is Free</a>
+                </div><!-- button -->
+            </div><!-- menu -->
+        </div><!-- container -->
     </header>
 
     <main>
-        <!-- main - content -->
+
+        <section class="banner">
+            <div class="container">
+                <div class="text">
+                    <h1>Build The Community Your Fans Will Love</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam est reiciendis alias iusto
+                        corrupti beatae maxime molestiae velit quod. Nostrum non quidem quis possimus ad facilis,
+                        placeat voluptatum expedita quibusdam.</p>
+                    <a href="#">Get Started For Free</a>
+                </div><!-- text -->
+                <div class="image">
+                    <img width="100%" src="./img/illustration-mockups.svg" alt="Banner Principal - Mockups">
+                </div><!-- image_desktop -->
+            </div><!-- container -->
+        </section><!-- banner -->
+
+
+        <section class="content_1">
+            <div class="container">
+                <div class="item">
+                    <div class="text">
+                        <h2>Grow Together</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit possimus, consequatur odit
+                            voluptatum at obcaecati asperiores nemo numquam cupiditate quibusdam autem incidunt maxime
+                            dolorum ducimus cumque ipsum sequi, odio ex!</p>
+                    </div>
+                    <div class="image">
+                        <img width="100%" src="img/illustration-grow-together.svg" alt="Imagem - Grow Together">
+                    </div>
+                </div><!-- item -->
+
+                <div class="item invert">
+                    <div class="text">
+                        <h2>Flowing Conversations</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit possimus, consequatur odit
+                            voluptatum at obcaecati asperiores nemo numquam cupiditate quibusdam autem incidunt maxime
+                            dolorum ducimus cumque ipsum sequi, odio ex!</p>
+                    </div>
+                    <div class="image">
+                        <img width="100%" src="img/illustration-flowing-conversation.svg" alt="Imagem - Flowing Conversations">
+                    </div>
+                </div><!-- item -->
+
+                <div class="item">
+                    <div class="text">
+                        <h2>Your Users</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit possimus, consequatur odit
+                            voluptatum at obcaecati asperiores nemo numquam cupiditate quibusdam autem incidunt maxime
+                            dolorum ducimus cumque ipsum sequi, odio ex!</p>
+                    </div>
+                    <div class="image">
+                        <img width="100%" src="img/illustration-your-users.svg" alt="Imagem - Your Users">
+                    </div>
+                </div><!-- item -->
+            </div><!-- container -->
+        </section><!-- content_1 -->
+
+        <section class="bottom">
+            <div class="container">
+                <h2>Ready To Build Your Community?</h2>
+                <a href="#">Get Started For Free</a>
+            </div><!-- container -->
+        </section><!-- bottom -->
+
     </main>
 
     <footer>
-        <!-- footer and sub-menu for navigation -->
+        <div class="container">
+            <div class="display">
+                <div class="contact">
+
+                </div><!-- contact -->
+                <div class="pages01">
+
+                </div><!-- pages01 -->
+                <div class="pages02">
+
+                </div><!-- pages02 -->
+                <div class="icons">
+                    
+                </div>
+            </div><!-- display -->
+        </div><!-- display -->        
     </footer>
 
 </body>
