Structure of SASS

--- a/Projeto04/index.html
+++ b/Projeto04/index.html
@@ -16,12 +16,12 @@
         <div class="container">
             <div class="menu">
                 <div class="logo">
-                    <a href="/ProjetosFront/Projeto04">
+                    <a href="/Projeto04">
                         <img src="./img/logo.svg" alt="Logo Huddle">
                     </a>
                 </div><!-- logo -->
                 <div class="button">
-                    <a href="/ProjetosFront/Projeto04">Try is Free</a>
+                    <a href="/Projeto04">Try is Free</a>
                 </div><!-- button -->
             </div><!-- menu -->
         </div><!-- container -->
@@ -34,8 +34,7 @@
                 <div class="text">
                     <h1>Build The Community Your Fans Will Love</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam est reiciendis alias iusto
-                        corrupti beatae maxime molestiae velit quod. Nostrum non quidem quis possimus ad facilis,
-                        placeat voluptatum expedita quibusdam.</p>
+                        voluptatum expedita quibusdam.</p>
                     <a href="#">Get Started For Free</a>
                 </div><!-- text -->
                 <div class="image">
@@ -67,7 +66,8 @@
                             dolorum ducimus cumque ipsum sequi, odio ex!</p>
                     </div>
                     <div class="image">
-                        <img width="100%" src="img/illustration-flowing-conversation.svg" alt="Imagem - Flowing Conversations">
+                        <img width="100%" src="img/illustration-flowing-conversation.svg"
+                            alt="Imagem - Flowing Conversations">
                     </div>
                 </div><!-- item -->
 
@@ -96,21 +96,38 @@
 
     <footer>
         <div class="container">
+            <img src="img/logo.svg" alt="Logo Huddle">
             <div class="display">
                 <div class="contact">
-
+                    <div class="location">
+                        <img src="img/icon-location.svg" alt="Icone Localização">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perferendis exercitationem
+                            excepturi nam consequatur voluptates cupiditate.</p>
+                    </div><!-- location -->
+                    <div class="phone">
+                        <img src="img/icon-phone.svg" alt="Icone Telefone">
+                        <a href="tel:+1-543-123-4567">+1-543-123-4567</a>
+                    </div><!-- phone -->
+                    <div class="email">
+                        <img src="img/icon-email.svg" alt="Icone Email">
+                        <a href="mailto:example@huddle.com">example@huddle.com</a>
+                    </div><!-- email -->
                 </div><!-- contact -->
-                <div class="pages01">
-
+                <div class="links">
+                    <a href="/Projeto04/">About</a>
+                    <a href="/Projeto04/">What We Do</a>
+                    <a href="/Projeto04/">FAQ</a>
                 </div><!-- pages01 -->
-                <div class="pages02">
-
+                <div class="links">
+                    <a href="/Projeto04/">Career</a>
+                    <a href="/Projeto04/">Blog</a>
+                    <a href="/Projeto04/">Contact Us</a>
                 </div><!-- pages02 -->
-                <div class="icons">
-                    
-                </div>
             </div><!-- display -->
-        </div><!-- display -->        
+            <div class="copyright">
+                <p>@ Copyright 2018 Huddle.</p>
+            </div>
+        </div><!-- container -->
     </footer>
 
 </body>
